--- a/error.html
+++ b/error.html
@@ -18,9 +18,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
         <!--favicon-->
-        <link rel="icon" href="icon/favicon-logo.png" type="image/x-icon">
+        <link rel="icon" href="/icon/favicon-logo.png" type="image/x-icon">
         <!--オリジナルcss-->
-        <link rel="stylesheet" href="css-contactPage/contact.css">
+        <link rel="stylesheet" href="css-errorPage/error.css">
         <!--jquery-->
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <!--構造化マークアップ-->
@@ -36,14 +36,10 @@
                 "url": "https:########"
             }
         </script>-->
-        
         <meta name="robots" content="noindex, follow">
     </head>
     <body>
-        <div class="skipLink">
-            <a class="skipLink_text" href="#main" aria-hidden="true">メインコンテンツへ</a>
-        </div>
-        <header id="header" class="l-header__subpage">
+        <header id="header" class="l-header__errorPage">
             <nav class="nav__pc">
                 <ul class="navPc_list">
                     <li><a class="navPc_item" aria-label="エコーについて" href="about.html">ECHOについて</a></li>
@@ -96,45 +92,27 @@
             </nav>    
         </header>
         <main id="main" class="l-main">
-            <section class="l-mainVisual">
-                <div class="mainVisual_content">
-                    <div class="const_board">
-                        <div class="board_content">
-                            <p class="board_text board_text__top" aria-hidden="true">ご迷惑おかけします</p>
-                            <p class="board_text board_text__name" aria-hidden="true">ECHO建設工事中</p>
-                            <p class="board_text board_text__construction" aria-hidden="true">ご協力お願いします</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <img class="l-radiousImg" src="img/radious.png">
-            <h1 class="m-title">お問い合わせ</h1>
-            <section class="l-cta">
-                <div class="container__cta">
-                    <h2 class="cta_title__conPage">お問い合わせはこちらから</h2>
-                    <p class="cta_text__conPage">要件とお名前を記入してくださいね！</p>
-                    <a class="cta_button__conPage" href="#">お問い合わせフォーム</a>
-                </div>
-            </section>
-            <img class="l-waveImg__b" src="img/wave_b.png">
-            <section class="l-sns">
-                <h2 class="sns_title" aria-label="エスエヌエスリンク">SNSリンク</h2>
-                <div class="sns_content">
-                    <p class="sns_text">
-                       テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-                       テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-                       テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト 
-                    </p>
-                    <a class="sns_link" href="###"></a>
-                </div>
-            </section>
-        </main>
-        <!--js-->   
+        <section class="l-message">
+            <h1 class="error_title" aria-label="けいけんしたよんまるよんだけつよくなれるよ">経験した404だけつよくなれるよ！</h1>
+            <p class="error_text">
+                お探しのページは見つかりませんでした。<br>
+                当該ページは削除または<br>
+                urlが変更された可能性が高いです。<br>
+                もう一度、urlの文字列を確認してみてください。
+            </p>
+            <p class="error_text">
+                もしそれでも404になったら<br>
+                お問い合わせフォームで<br>
+                エラー内容を教えてください。<br>
+                もしかしたら開発者(私)が気づいてないのかも。
+            </p>
+        </section>
+        <!--js-->
         <script src="script.js"></script>
+        </main>
         <footer id="footer" class="l-footer">
             <div class="footer_copyRight">
                 <small>&copy;2025 ECHO</small>
             </div>
         </footer>
     </body>
-</html>
