--- a/about.html
+++ b/about.html
@@ -2,8 +2,8 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <title>ECHO_local</title>
-        <meta name="description" content="######">
+        <title>【団体紹介ページ】ECHO-南山大学の環境ボランティアサークル</title>
+        <meta name="description" content="ECHOは南山大学の環境ボランティア団体。理念、活動実績、メンバーの声を掲載中。初心者も大歓迎です！">
         <meta property="og:url" content="https://###########">
         <meta property="og:type" content="website">
         <meta property="og:title" content="ECHO_local">
@@ -20,7 +20,7 @@
         <!--favicon-->
         <link rel="icon" href="icon/favicon-logo.png" type="image/x-icon">
         <!--オリジナルcss-->
-        <link rel="stylesheet" href="css__aboutPage/about.css">
+        <link rel="stylesheet" href="css-aboutPage/about.css">
         <!--jquery-->
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <!--構造化マークアップ-->
@@ -40,13 +40,16 @@
         <meta name="robots" content="noindex, follow">
     </head>
     <body>
+        <div class="skipLink">
+            <a class="skipLink_text" href="#main">メインコンテンツへ</a>
+        </div>
         <header id="header" class="l-header__subpage">
             <nav class="nav__pc">
                 <ul class="navPc_list">
-                    <li><a class="navPc_item" href="about.html">ECHOについて</a></li>
+                    <li><a class="navPc_item" aria-label="エコーについて" href="about.html">ECHOについて</a></li>
                     <li><a class="navPc_item" href="activity.html">活動紹介</a></li>
                     <li><a class="navPc_item" href="contact.html">お問い合わせ</a></li>
-                    <li class="navPc_home"><a class="navPc_item navPc_item__home" href="index.html">HOME</a></li>
+                    <li class="navPc_home"><a class="navPc_item navPc_item__home" aria-label="ホーム" href="index.html">HOME</a></li>
                 </ul>
             </nav>
             <nav class="nav__sp">
@@ -58,7 +61,7 @@
                             <span class="line__arrow line2__arrow"></span>
                         </div>
                     </a>
-                    <div class="navSp_hamburger">
+                    <div class="navSp_hamburger" tabindex="0">
                         <span class="line line1"></span>
                         <span class="line line2"></span>
                         <span class="line line3"></span>
@@ -70,7 +73,14 @@
                             <span class="line__arrow line1__arrow"></span>
                             <span class="line__arrow line2__arrow"></span>
                         </div>
-                        <a class="dropdown_itemText" href="about.html">ECHOについて</a>
+                        <a class="dropdown_itemText" aria-label="ホーム" href="index.html">HOME</a>
+                    </li>
+                    <li class="dropdown_item">
+                        <div class="arrow">
+                            <span class="line__arrow line1__arrow"></span>
+                            <span class="line__arrow line2__arrow"></span>
+                        </div>
+                        <a class="dropdown_itemText" href="about.html" aria-label="エコーについて">ECHOについて</a>
                     </li>
                     <li class="dropdown_item">
                         <div class="arrow">
@@ -80,11 +90,7 @@
                         <a class="dropdown_itemText" href="activity.html">活動紹介</a>
                     </li>
                     <li class="dropdown_item">
-                        <div class="arrow">
-                            <span class="line__arrow line1__arrow"></span>
-                            <span class="line__arrow line2__arrow"></span>
-                        </div>
-                        <a class="dropdown_itemText" href="index.html">HOME</a>
+                        <button class="dropdown_itemText dropdown_itemText__close">メニューを閉じる</button>
                     </li>
                 </ul>
             </nav>    
@@ -103,7 +109,7 @@
             </section>
             <img class="l-radiousImg" src="img/radious.png">
             <section class="l-body">
-                <h1 class="m-title">ECHOについて</h1>
+                <h1 class="m-title" aria-label="エコーについて">ECHOについて</h1>
                 <div class="activity_item">
                     <img class="activity_itemImg" src="" alt="">
                     <div class="activity_itemImg__sp">
@@ -111,21 +117,27 @@
                     </div>
                     <div class="activity_itemContent">
                         <div class="activity_itemText">
-                            <h3 class="activity_itemTitle">タイトルタイトル</h3>
+                            <h2 class="activity_itemTitle">タイトルタイトル</h2>
                             <p class="activity_itemDescription">
                                 テキストテキストテキストテキストテキストテキストテキストテキスト
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                                テキストテキストテキストテキストテキストテキストテキストテキスト
                             </p>
                         </div>
                     </div>
                 </div>
+
                 <div class="activity_item">
+                    <img class="activity_itemImg activity_itemImg__r" src="" alt="">
+                    <div class="activity_itemImg__sp">
+                        <img src="" alt="">
+                    </div>
                     <div class="activity_itemContent activity_itemContent__r">
-                        <div class="activity_itemText">
-                            <h3 class="activity_itemTitle">タイトルタイトル</h3>
+                        <div class="activity_itemText__r">
+                            <h2 class="activity_itemTitle">タイトルタイトル</h2>
                             <p class="activity_itemDescription">
                                 テキストテキストテキストテキストテキストテキストテキストテキスト
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
@@ -133,10 +145,6 @@
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
                             </p>
                         </div>
-                    </div>
-                    <img class="activity_itemImg activity_itemImg__r" src="" alt="">
-                    <div class="activity_itemImg__sp">
-                        <img src="" alt="">
                     </div>
                 </div>
             </section>
