--- a/about.html
+++ b/about.html
@@ -2,8 +2,8 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <title>ECHO_local</title>
-        <meta name="description" content="######">
+        <title>【団体紹介ページ】ECHO-南山大学の環境ボランティアサークル</title>
+        <meta name="description" content="ECHOは南山大学の環境ボランティア団体。理念、活動実績、メンバーの声を掲載中。初心者も大歓迎です！">
         <meta property="og:url" content="https://###########">
         <meta property="og:type" content="website">
         <meta property="og:title" content="ECHO_local">
@@ -41,7 +41,7 @@
     </head>
     <body>
         <div class="skipLink">
-            <a class="skipLink_text" href="#main" aria-hidden="true">メインコンテンツへ</a>
+            <a class="skipLink_text" href="#main">メインコンテンツへ</a>
         </div>
         <header id="header" class="l-header__subpage">
             <nav class="nav__pc">
@@ -117,21 +117,27 @@
                     </div>
                     <div class="activity_itemContent">
                         <div class="activity_itemText">
-                            <h3 class="activity_itemTitle">タイトルタイトル</h3>
+                            <h2 class="activity_itemTitle">タイトルタイトル</h2>
                             <p class="activity_itemDescription">
                                 テキストテキストテキストテキストテキストテキストテキストテキスト
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                                テキストテキストテキストテキストテキストテキストテキストテキスト
                             </p>
                         </div>
                     </div>
                 </div>
+
                 <div class="activity_item">
+                    <img class="activity_itemImg activity_itemImg__r" src="" alt="">
+                    <div class="activity_itemImg__sp">
+                        <img src="" alt="">
+                    </div>
                     <div class="activity_itemContent activity_itemContent__r">
-                        <div class="activity_itemText">
-                            <h3 class="activity_itemTitle">タイトルタイトル</h3>
+                        <div class="activity_itemText__r">
+                            <h2 class="activity_itemTitle">タイトルタイトル</h2>
                             <p class="activity_itemDescription">
                                 テキストテキストテキストテキストテキストテキストテキストテキスト
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
@@ -139,10 +145,6 @@
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
                             </p>
                         </div>
-                    </div>
-                    <img class="activity_itemImg activity_itemImg__r" src="" alt="">
-                    <div class="activity_itemImg__sp">
-                        <img src="" alt="">
                     </div>
                 </div>
             </section>
