--- a/activity.html
+++ b/activity.html
@@ -2,8 +2,8 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <title>ECHO_local</title>
-        <meta name="description" content="######">
+        <title>【活動紹介ページ】ECHO-南山大学の環境ボランティアサークル</title>
+        <meta name="description" content="海岸や学内の清掃活動、リサイクル推進など、ECHOが年間を通じて行う環境活動を紹介。無理なく楽しく参加できます。">
         <meta property="og:url" content="https://###########">
         <meta property="og:type" content="website">
         <meta property="og:title" content="ECHO_local">
@@ -40,7 +40,7 @@
     </head>
     <body>
         <div class="skipLink">
-            <a class="skipLink_text" href="#main" aria-hidden="true">メインコンテンツへ</a>
+            <a class="skipLink_text" href="#main">メインコンテンツへ</a>
         </div>
         <header id="header" class="l-header__subpage">
             <nav class="nav__pc">
@@ -109,6 +109,7 @@
             <img class="l-radiousImg" src="img/radious.png">
             <section class="l-body">
                 <h1 class="m-title" aria-label="エコーのかつどうについて">ECHOの活動について</h1>
+                
                 <div class="activity_item">
                     <img class="activity_itemImg" src="" alt="">
                     <div class="activity_itemImg__sp">
@@ -116,21 +117,27 @@
                     </div>
                     <div class="activity_itemContent">
                         <div class="activity_itemText">
-                            <h3 class="activity_itemTitle">タイトルタイトル</h3>
+                            <h2 class="activity_itemTitle">タイトルタイトル</h2>
                             <p class="activity_itemDescription">
                                 テキストテキストテキストテキストテキストテキストテキストテキスト
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                                テキストテキストテキストテキストテキストテキストテキストテキスト
                             </p>
                         </div>
                     </div>
                 </div>
+
                 <div class="activity_item">
+                    <img class="activity_itemImg activity_itemImg__r" src="" alt="">
+                    <div class="activity_itemImg__sp">
+                        <img src="" alt="">
+                    </div>
                     <div class="activity_itemContent activity_itemContent__r">
-                        <div class="activity_itemText">
-                            <h3 class="activity_itemTitle">タイトルタイトル</h3>
+                        <div class="activity_itemText__r">
+                            <h2 class="activity_itemTitle">タイトルタイトル</h2>
                             <p class="activity_itemDescription">
                                 テキストテキストテキストテキストテキストテキストテキストテキスト
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
@@ -139,11 +146,8 @@
                             </p>
                         </div>
                     </div>
-                    <img class="activity_itemImg activity_itemImg__r" src="" alt="">
-                    <div class="activity_itemImg__sp">
-                        <img src="" alt="">
-                    </div>
                 </div>
+                
                 <div class="activity_item">
                     <img class="activity_itemImg" src="" alt="">
                     <div class="activity_itemImg__sp">
@@ -151,21 +155,27 @@
                     </div>
                     <div class="activity_itemContent">
                         <div class="activity_itemText">
-                            <h3 class="activity_itemTitle">タイトルタイトル</h3>
+                            <h2 class="activity_itemTitle">タイトルタイトル</h2>
                             <p class="activity_itemDescription">
                                 テキストテキストテキストテキストテキストテキストテキストテキスト
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                                テキストテキストテキストテキストテキストテキストテキストテキスト
                             </p>
                         </div>
                     </div>
                 </div>
+
                 <div class="activity_item">
+                    <img class="activity_itemImg activity_itemImg__r" src="" alt="">
+                    <div class="activity_itemImg__sp">
+                        <img src="" alt="">
+                    </div>
                     <div class="activity_itemContent activity_itemContent__r">
-                        <div class="activity_itemText">
-                            <h3 class="activity_itemTitle">タイトルタイトル</h3>
+                        <div class="activity_itemText__r">
+                            <h2 class="activity_itemTitle">タイトルタイトル</h2>
                             <p class="activity_itemDescription">
                                 テキストテキストテキストテキストテキストテキストテキストテキスト
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
@@ -173,10 +183,6 @@
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
                             </p>
                         </div>
-                    </div>
-                    <img class="activity_itemImg activity_itemImg__r" src="" alt="">
-                    <div class="activity_itemImg__sp">
-                        <img src="" alt="">
                     </div>
                 </div>
             </section>
