--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,8 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <title>ECHO_local</title>
-        <meta name="description" content="######">
+        <title>【お問い合わせページ】ECHO-南山大学の環境ボランティアサークル</title>
+        <meta name="description" content="南山大学ECHOへの入会、ボランティア参加、企業・団体からの連携依頼はこちら。メールフォームからお気軽にご連絡ください。">
         <meta property="og:url" content="https://###########">
         <meta property="og:type" content="website">
         <meta property="og:title" content="ECHO_local">
@@ -41,7 +41,7 @@
     </head>
     <body>
         <div class="skipLink">
-            <a class="skipLink_text" href="#main" aria-hidden="true">メインコンテンツへ</a>
+            <a class="skipLink_text" href="#main">メインコンテンツへ</a>
         </div>
         <header id="header" class="l-header__subpage">
             <nav class="nav__pc">
@@ -108,7 +108,7 @@
                 </div>
             </section>
             <img class="l-radiousImg" src="img/radious.png">
-            <h1 class="m-title">お問い合わせ</h1>
+            <h2 class="m-title">お問い合わせ</h2>
             <section class="l-cta">
                 <div class="container__cta">
                     <h2 class="cta_title__conPage">お問い合わせはこちらから</h2>
