--- a/error.html
+++ b/error.html
@@ -2,8 +2,8 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <title>ECHO_local</title>
-        <meta name="description" content="######">
+        <title>ページが見つかりませんでした。</title>
+        <meta name="description" content="404エラー：ページが見つかりませんでした。">
         <meta property="og:url" content="https://###########">
         <meta property="og:type" content="website">
         <meta property="og:title" content="ECHO_local">
@@ -18,7 +18,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
         <!--favicon-->
-        <link rel="icon" href="/icon/favicon-logo.png" type="image/x-icon">
+        <link rel="icon" href="icon/favicon-logo.png" type="image/x-icon">
         <!--オリジナルcss-->
         <link rel="stylesheet" href="css-errorPage/error.css">
         <!--jquery-->
@@ -36,7 +36,7 @@
                 "url": "https:########"
             }
         </script>-->
-        <meta name="robots" content="noindex, follow">
+        <meta name="robots" content="noindex, nofollow">
     </head>
     <body>
         <header id="header" class="l-header__errorPage">
@@ -93,7 +93,7 @@
         </header>
         <main id="main" class="l-main">
         <section class="l-message">
-            <h1 class="error_title" aria-label="けいけんしたよんまるよんだけつよくなれるよ">経験した404だけつよくなれるよ！</h1>
+            <h1 class="error_title" aria-label="ページが見つかりませんでした。">経験した404だけつよくなれるよ！</h1>
             <p class="error_text">
                 お探しのページは見つかりませんでした。<br>
                 当該ページは削除または<br>
