--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <title>ECHO_local</title>
-        <meta name="description" content="######">
+        <title>【体験入会実施中】トップページ-ECHO 南山大学の環境ボランティアサークル</title>
+        <meta name="description" content="南山大学の環境ボランティアサークルECHO（エコー）。キャンパス緑化から海岸清掃まで、楽しく地球に優しい活動をしています。">
         <meta property="og:url" content="https://###########">
         <meta property="og:type" content="website">
         <meta property="og:title" content="ECHO_local">
@@ -76,7 +76,7 @@
     </div>
     <div class="l-mainPage">
         <div class="skipLink">
-            <a class="skipLink_text" href="#main" aria-hidden="true">メインコンテンツへ</a>
+            <a class="skipLink_text" href="#main">メインコンテンツへ</a>
         </div>
         <header id="header" class="l-header">
             <nav class="nav__pc">
@@ -136,8 +136,10 @@
                     <div class="const_board">
                         <div class="board_content">
                             <p class="board_text board_text__top" aria-hidden="true">ご迷惑おかけします</p>
-                            <p class="board_text board_text__jobTitle">南山大学環境系サークル</p>
-                            <h1 class="board_text board_text__nameTop" aria-label="エコー">ECHO</h1>
+                            <h1>
+                                <span class="board_text board_text__jobTitle">南山大学環境系サークル</span>
+                                <span class="board_text board_text__nameTop" aria-label="エコー">ECHO</span>
+                            </h1>
                             <p class="board_text board_text__construction" aria-hidden="true">建設工事中</p>
                         </div>
                     </div>
@@ -201,6 +203,7 @@
                         テキストテキストテキストテキストテキストテキスト
                     </p>
                 </div>
+
                 <div class="activity_item">
                     <img class="activity_itemImg" src="" alt="">
                     <div class="activity_itemImg__sp">
@@ -215,13 +218,19 @@
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                                テキストテキストテキストテキストテキストテキストテキストテキスト
                             </p>
                         </div>
                     </div>
                 </div>
+
                 <div class="activity_item">
+                    <img class="activity_itemImg activity_itemImg__r" src="" alt="">
+                    <div class="activity_itemImg__sp">
+                        <img src="" alt="">
+                    </div>
                     <div class="activity_itemContent activity_itemContent__r">
-                        <div class="activity_itemText">
+                        <div class="activity_itemText__r">
                             <h3 class="activity_itemTitle">タイトルタイトル</h3>
                             <p class="activity_itemDescription">
                                 テキストテキストテキストテキストテキストテキストテキストテキスト
@@ -231,11 +240,8 @@
                             </p>
                         </div>
                     </div>
-                    <img class="activity_itemImg activity_itemImg__r" src="" alt="">
-                    <div class="activity_itemImg__sp">
-                        <img src="" alt="">
-                    </div>
                 </div>
+
                 <div class="activity_item">
                     <img class="activity_itemImg" src="" alt="">
                     <div class="activity_itemImg__sp">
@@ -253,9 +259,14 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="activity_item">
+                    <img class="activity_itemImg activity_itemImg__r" src="" alt="">
+                    <div class="activity_itemImg__sp">
+                        <img src="" alt="">
+                    </div>
                     <div class="activity_itemContent activity_itemContent__r">
-                        <div class="activity_itemText">
+                        <div class="activity_itemText__r">
                             <h3 class="activity_itemTitle">タイトルタイトル</h3>
                             <p class="activity_itemDescription">
                                 テキストテキストテキストテキストテキストテキストテキストテキスト
@@ -265,11 +276,8 @@
                             </p>
                         </div>
                     </div>
-                    <img class="activity_itemImg activity_itemImg__r" src="" alt="">
-                    <div class="activity_itemImg__sp">
-                        <img src="" alt="">
-                    </div>
                 </div>
+
             </section>
             <img class="l-waveImg__b" src="img/wave_b.png">
             <section class="l-intro">
